# textbook-rag

./: .dev-state.yaml  .env.example  .env.ngrok.example  .gitignore  AGENTS.md  _test_perf.ps1  package-lock.json  pyproject.toml  pyrightconfig.json
.agent/: instructions.md
.agent/workflows/: dev.md  rag-dev-v2.md  rag-dev-v3.md  rag-dev.md
.github/references/: clone-references.ps1
_archive/backend-v1.1/: README.md
_archive/docs-requirements/: discovery-notes.md
_archive/docs-v1.1/: prd.md
_archive/engine/: __init__.py  config.py
_archive/frontend-v1.0/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
_archive/payload/: next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
backend/app/: config.py  database.py  main.py  rag_engine.py
backend/tests/: conftest.py  test_book_repo.py  test_books_router.py  test_chunk_repo.py  test_config.py  test_generation.py  test_generation_service.py  test_query_router.py  test_query_service.py  test_rag_engine.py  test_retrieval_service.py  test_retrievers.py  test_source_tracer.py
docs/: deployment.md  features-refactoring-plan.md  pipeline-init-report.md  prd-v2.md  project-brief.md  review-report.md  rtx5090-laptop-vs-desktop-analysis.md  rtx5090-summary-ko.md
docs/architecture/: system-architecture.md
docs/codemaps/: backend.md  database.md  frontend.md
docs/deployment/: ngrok-local.md
docs/reviews/: phase-06-backend.md
docs/sprints/: sprint-plan.md
docs/v1.0/: deployment.md  review-report.md  test-report.md
engine/: config.py
engine/adapters/: chroma_adapter.py
engine/api/: app.py  deps.py
engine/ingest/: __init__.py  chunk_builder.py  pipeline.py
engine/rag/: __init__.py  citation.py  config.py  core.py  fusion.py  generation.py  quality.py  retrieval.py  trace.py  types.py
engine_v2/: __init__.py  logging_config.py  schema.py  settings.py
engine_v2/api/: __init__.py  app.py  deps.py  log_capture.py
engine_v2/chunking/: __init__.py  chapter_extractor.py  section_merger.py
engine_v2/classify/: __init__.py  prompts.py
engine_v2/consulting/: __init__.py  helpers.py  keyword_extractor.py  personas.py  prompts.py  query_service.py  user_docs.py
engine_v2/crawling/: __init__.py  _ingest_web_deprecated.py  _web_crawler_v1_deprecated.py  ingest_web.py  js_snippets.py  site_profile.py  web_crawler.py  web_crawler_v2.py
engine_v2/embeddings/: resolver.py
engine_v2/evaluation/: __init__.py  aggregation.py  evaluator.py  (+10 more)
frontend/: index.html  tsconfig.tsbuildinfo
payload/: .env.example  next.config.ts  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
payload-v2/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
scripts/: README.md  _paths.py  analyze_coverage.py  batch_ingest_real_estate.py  batch_regen.py  batch_reingest_ecdev.py  build_final_report.py  crawler_cli.py  explore_sources.py  explore_sources_output.json  explore_sources_output.txt  fill_final_report.py  gen_final_presentation.py  init_books.py  migrate_to_source_dirs.py  patch_chatpage.py  rebuild_db.py  rebuild_toc.py  scan_terms.py  sync_to_payload.py  test_browser.py  test_re_books.py
(+1238 files in other folders)
